--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/848bf7abdc.js" crossorigin="anonymous"></script>
     <script src="scripts/script.js"></script>
