--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     </header>
     <section class="section">
       <h2 class="center" id="how">How it works</h2>
-      <p class="description">Feeling overwhelmed? Life is getting crazy and hectic? You wish you could just
+      <p class="space-above">Feeling overwhelmed? Life is getting crazy and hectic? You wish you could just
         drop everything and focus on yourself for a change? Look no further! Our team will help you restore
         your peace of mind and a sense of balance.</p>
+      <br>
       <p>Our hand-crafted plans (“Camps”) are designed to bring peace
         and serenity back into your life. Be it through yoga, meditation or music – after just a few days you will feel
         energized and ready to tackle the world head on.</p>
@@ -116,7 +117,7 @@
     </section>
     <section class="section">
       <h2 class="center" id="contact">Get in touch</h2>
-      <p>Send us a message and we will get back to you with a personalised plan perfect for you.</p>
+      <p class="space-above">Send us a message and we will get back to you with a personalised plan perfect for you.</p>
       <form id="form" action="https://www.freecodecamp.com/email-submit">
         <div class="flex">
           <label class="left" for="name">Your name:</label>
