--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section class="section">
       <h2 class="center" id="contact">Get in touch</h2>
       <p class="space-above">Send us a message and we will get back to you with a personalised plan perfect for you.</p>
-      <form id="form" action="https://www.freecodecamp.com/email-submit">
+      <form id="form" action="">
         <div class="flex">
           <label class="left" for="name">Your name:</label>
           <input class="right" type="text" id="name" name="name" placeholder="enter your name">
