subtler drop shadows, delete empty classes, footer in the right place

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
     <section class="section">
       <h2 class="center" id="yoga">Yoga Camp</h2>
       <img class="image" src="images/pixeltrue-yoga-1.svg">
-      <p class=>This ancient art of harmonious movement is the perfect way to reestablish harmony in your busy life.
+      <p>This ancient art of harmonious movement is the perfect way to reestablish harmony in your busy life.
         With the help of our professional yogis you will develop strength and flexibility which you can then utilize in every situation.</p>
       <br>
       <p>For our beginners we offer introductory classes teaching you the proper techniques of breathing and movement to establish a strong
         foundation for the more advanced techniques. No experience is necessary and there is no age restriction – yoga can be learned easily by anyone.</p>
       <br>
-        For our more advanced users we offer more challenging sessions with some of the best yogis in the world. With their help you will achieve
+      <p>For our more advanced users we offer more challenging sessions with some of the best yogis in the world. With their help you will achieve
         mastery over your body and mind.</p>
       <div class="sign-up center">
         <a href="#contact">Sign me up!</a>
@@ -86,7 +86,7 @@
     <section class="section">
       <h2 class="center" id="meditation">Meditation Camp</h2>
       <img class="image" src="images/pixeltrue-meditation-1.svg">
-      <p class=>The art of meditation is deceptively simple – it’s just sitting. Anyone who tried to do it
+      <p>The art of meditation is deceptively simple – it’s just sitting. Anyone who tried to do it
         though will know that this simplicity is complicated by out mind’s tendency to wander. No worries! With the
         help of our seasoned meditation masters you will learn to overcome your “monkey mind” and find peace and serenity.</p>
       <br>
@@ -100,7 +100,7 @@
     <section class="section">
       <h2 class="center" id="music">Music Camp</h2>
       <img class="image" src="images/pixeltrue-learning-1.svg">
-      <p class=>Your heart is singing, yet you almost forgot its tune – it's time to return to the
+      <p>Your heart is singing, yet you almost forgot its tune – it's time to return to the
         wonderful music of your soul. With the help of our professional musicians, musicologist, and music
         therapists you will rediscover the harmony that drives your life.</p>
       <br>
@@ -134,14 +134,14 @@
         </div>
       </form>
     </section>
+    <footer>
+      <div class="footer-wrap">
+        <a href="#contact">Terms of service</a>
+        <a href="#contact">Privacy policy</a>
+        <a href="#contact">Cookie policy</a>
+        <a href="#contact">Contact</a>
+      </div>
+      <p class="copyright"><i class="far fa-copyright fa-xs"></i>Wojciech Gmuzdek 2020</p>
+    </footer>
   </body>
-  <footer>
-    <div class="footer-wrap">
-      <a href="#contact">Terms of service</a>
-      <a href="#contact">Privacy policy</a>
-      <a href="#contact">Cookie policy</a>
-      <a href="#contact">Contact</a>
-    </div>
-    <p class="copyright"><i class="far fa-copyright fa-xs"></i>Wojciech Gmuzdek 2020</p>
-  </footer>
 </html>
