--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/848bf7abdc.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon" />
+    <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/848bf7abdc.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="scripts/script.js"></script>
     <title>Life Escaper</title>
   </head>
   <body>
     <header class="header" id="header">
-      <img id="header-img" src="images/pixeltrue-jogging-1.svg">
+      <img id="header-img" src="images/pixeltrue-jogging-1.svg" />
       <h1 class="center">Life Escaper</h1>
       <p class="center subtitle">We can help you run away from your life</p>
       <p class="center small-sub">(for a while, at least)</p>
@@ -31,105 +37,166 @@
     </header>
     <section class="section">
       <h2 class="center" id="how">How it works</h2>
-      <p class="space-above">Feeling overwhelmed? Life is getting crazy and hectic? You wish you could just
-        drop everything and focus on yourself for a change? Look no further! Our team will help you restore
-        your peace of mind and a sense of balance.</p>
-      <br>
-      <p>Our hand-crafted plans (“Camps”) are designed to bring peace
-        and serenity back into your life. Be it through yoga, meditation or music – after just a few days you will feel
-        energized and ready to tackle the world head on.</p>
+      <p class="space-above">
+        Feeling overwhelmed? Life is getting crazy and hectic? You wish you
+        could just drop everything and focus on yourself for a change? Look no
+        further! Our team will help you restore your peace of mind and a sense
+        of balance.
+      </p>
+      <br />
+      <p>
+        Our hand-crafted plans (“Camps”) are designed to bring peace and
+        serenity back into your life. Be it through yoga, meditation or music –
+        after just a few days you will feel energized and ready to tackle the
+        world head on.
+      </p>
     </section>
     <section class="big-section-wrap">
       <h2 class="center" id="offer">Our Camps</h2>
       <div class="big-section">
         <div class="one-of-three">
           <h3 class="center">Yoga Camp</h3>
-          <img class="image-smaller" src="images/bw-pixeltrue-yoga.svg">
-          <p>Our Yoga Camp is dedicated to physical restoration and bringing balance
-            into your life. No position will be alien to you after this course.</p>
-            <br>
-            <p class="center"><a href="#yoga">Learn more</a></p>
-        </div>
-        <div class="one-of-three">
-          <h3 class="center">Meditation Camp</h3>
-          <img class="image-smaller" src="images/bw-pixeltrue-meditation.svg">
-          <p>Our Meditation Camp is dedicated to spiritual wanderers, guiding them
-            towards peace and serenity under the guidance of the world most renowned gurus.</p>
-          <br>
+          <img class="image-smaller" src="images/bw-pixeltrue-yoga.svg" />
+          <p>
+            Our Yoga Camp is dedicated to physical restoration and bringing
+            balance into your life. No position will be alien to you after this
+            course.
+          </p>
+          <br />
           <p class="center"><a href="#yoga">Learn more</a></p>
         </div>
         <div class="one-of-three">
+          <h3 class="center">Meditation Camp</h3>
+          <img class="image-smaller" src="images/bw-pixeltrue-meditation.svg" />
+          <p>
+            Our Meditation Camp is dedicated to spiritual wanderers, guiding
+            them towards peace and serenity under the guidance of the world most
+            renowned gurus.
+          </p>
+          <br />
+          <p class="center"><a href="#meditation">Learn more</a></p>
+        </div>
+        <div class="one-of-three">
           <h3 class="center">Music Camp</h3>
-          <img class="image-smaller" src="images/bw-pixeltrue-learning.svg">
-          <p>Our Music Camp is dedicated to sound therapy, quietening the buzz
-            of the everyday rush, and surrounding our guests with warm and friendly tones of peace.</p>
-          <br>
-          <p class="center"><a class="center" href="#yoga">Learn more</a></p>
+          <img class="image-smaller" src="images/bw-pixeltrue-learning.svg" />
+          <p>
+            Our Music Camp is dedicated to sound therapy, quietening the buzz of
+            the everyday rush, and surrounding our guests with warm and friendly
+            tones of peace.
+          </p>
+          <br />
+          <p class="center"><a class="center" href="#music">Learn more</a></p>
         </div>
       </div>
     </section>
     <section class="section">
       <h2 class="center" id="yoga">Yoga Camp</h2>
-      <img class="image" src="images/pixeltrue-yoga-1.svg">
-      <p>This ancient art of harmonious movement is the perfect way to reestablish harmony in your busy life.
-        With the help of our professional yogis you will develop strength and flexibility which you can then utilize in every situation.</p>
-      <br>
-      <p>For our beginners we offer introductory classes teaching you the proper techniques of breathing and movement to establish a strong
-        foundation for the more advanced techniques. No experience is necessary and there is no age restriction – yoga can be learned easily by anyone.</p>
-      <br>
-      <p>For our more advanced users we offer more challenging sessions with some of the best yogis in the world. With their help you will achieve
-        mastery over your body and mind.</p>
+      <img class="image" src="images/pixeltrue-yoga-1.svg" />
+      <p>
+        This ancient art of harmonious movement is the perfect way to
+        reestablish harmony in your busy life. With the help of our professional
+        yogis you will develop strength and flexibility which you can then
+        utilize in every situation.
+      </p>
+      <br />
+      <p>
+        For our beginners we offer introductory classes teaching you the proper
+        techniques of breathing and movement to establish a strong foundation
+        for the more advanced techniques. No experience is necessary and there
+        is no age restriction – yoga can be learned easily by anyone.
+      </p>
+      <br />
+      <p>
+        For our more advanced users we offer more challenging sessions with some
+        of the best yogis in the world. With their help you will achieve mastery
+        over your body and mind.
+      </p>
       <div class="sign-up center">
         <a href="#contact">Sign me up!</a>
       </div>
     </section>
     <section class="section">
       <h2 class="center" id="meditation">Meditation Camp</h2>
-      <img class="image" src="images/pixeltrue-meditation-1.svg">
-      <p>The art of meditation is deceptively simple – it’s just sitting. Anyone who tried to do it
-        though will know that this simplicity is complicated by out mind’s tendency to wander. No worries! With the
-        help of our seasoned meditation masters you will learn to overcome your “monkey mind” and find peace and serenity.</p>
-      <br>
-      <p>For beginners we offer introductory classes which are shorter and more playful, teaching the basics of breath-work and concentration.</p>
-      <br>
-      <p>For more experienced meditators we offer deep focus sessions, lasting up to 4 hours, allowing the practitioner to reach the state of pure being.</p>
+      <img class="image" src="images/pixeltrue-meditation-1.svg" />
+      <p>
+        The art of meditation is deceptively simple – it’s just sitting. Anyone
+        who tried to do it though will know that this simplicity is complicated
+        by out mind’s tendency to wander. No worries! With the help of our
+        seasoned meditation masters you will learn to overcome your “monkey
+        mind” and find peace and serenity.
+      </p>
+      <br />
+      <p>
+        For beginners we offer introductory classes which are shorter and more
+        playful, teaching the basics of breath-work and concentration.
+      </p>
+      <br />
+      <p>
+        For more experienced meditators we offer deep focus sessions, lasting up
+        to 4 hours, allowing the practitioner to reach the state of pure being.
+      </p>
       <div class="sign-up center">
         <a href="#contact">Sounds amazing!</a>
       </div>
     </section>
     <section class="section">
       <h2 class="center" id="music">Music Camp</h2>
-      <img class="image" src="images/pixeltrue-learning-1.svg">
-      <p>Your heart is singing, yet you almost forgot its tune – it's time to return to the
-        wonderful music of your soul. With the help of our professional musicians, musicologist, and music
-        therapists you will rediscover the harmony that drives your life.</p>
-      <br>
-      <p>With a selection of the best hand-crafted instruments (guitars, drums, flutes, shakers,
-        saxophones etc.) you will discover the wonderful world of sound and learns its healing power.</p>
-      <br>
-      <p>And if you cannot play any instrument? Worry not! Not only will you be surrounded by professional musicians
-        who will help you pick up the basics in no time, but you can also engage in “free music” – a spontaneous
-        improvisation coming straight from your heart. There are no wrong notes there!</p>
-      <br>
+      <img class="image" src="images/pixeltrue-learning-1.svg" />
+      <p>
+        Your heart is singing, yet you almost forgot its tune – it's time to
+        return to the wonderful music of your soul. With the help of our
+        professional musicians, musicologist, and music therapists you will
+        rediscover the harmony that drives your life.
+      </p>
+      <br />
+      <p>
+        With a selection of the best hand-crafted instruments (guitars, drums,
+        flutes, shakers, saxophones etc.) you will discover the wonderful world
+        of sound and learns its healing power.
+      </p>
+      <br />
+      <p>
+        And if you cannot play any instrument? Worry not! Not only will you be
+        surrounded by professional musicians who will help you pick up the
+        basics in no time, but you can also engage in “free music” – a
+        spontaneous improvisation coming straight from your heart. There are no
+        wrong notes there!
+      </p>
+      <br />
       <div class="sign-up center">
         <a href="#contact">Take my money!</a>
       </div>
     </section>
     <section class="section">
       <h2 class="center" id="contact">Get in touch</h2>
-      <p class="space-above">Send us a message and we will get back to you with a personalised plan perfect for you.</p>
+      <p class="space-above">
+        Send us a message and we will get back to you with a personalised plan
+        perfect for you.
+      </p>
       <form id="form" action="">
         <div class="flex">
           <label class="left" for="name">Your name:</label>
-          <input class="right" type="text" id="name" name="name" placeholder="enter your name">
-          <br class="label-gap">
+          <input
+            class="right"
+            type="text"
+            id="name"
+            name="name"
+            placeholder="enter your name"
+          />
+          <br class="label-gap" />
           <label class="left" for="email">Your email:</label>
-          <input class="right" type="email" id="email" name="email" placeholder="enter your email">
-          <br class="label-gap">
+          <input
+            class="right"
+            type="email"
+            id="email"
+            name="email"
+            placeholder="enter your email"
+          />
+          <br class="label-gap" />
           <label class="left" for="message">Your message:</label>
           <div class="flex-wrap">
             <textarea class="right" placeholder="..." rows="5"></textarea>
-            <input class="right-right" type="submit" value="Send" id="submit">
+            <input class="right-right" type="submit" value="Send" id="submit" />
           </div>
         </div>
       </form>
@@ -141,7 +208,9 @@
         <a href="#contact">Cookie policy</a>
         <a href="#contact">Contact</a>
       </div>
-      <p class="copyright"><i class="far fa-copyright fa-xs"></i>Wojciech Gmuzdek 2020</p>
+      <p class="copyright">
+        <i class="far fa-copyright fa-xs"></i>Wojciech Gmuzdek 2020
+      </p>
     </footer>
   </body>
 </html>
